Various minor changes

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "capture-console-logs": "^2.0.1-rc.1",
     "caught-object-report-json": "^7.1.7",
     "color-interpolate": "^1.0.5",
+    "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
     "downloadjs": "^1.4.7",
     "eventemitter3": "^5.0.1",
@@ -30,6 +31,8 @@
     "nearest-pantone": "^1.0.1",
     "object-sizeof": "^2.6.4",
     "overlayscrollbars": "^2.3.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "overlayscrollbars-react": "^0.5.2",
     "performant-array-to-tree": "^1.11.0",
     "pluralize": "^8.0.0",
