--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "url": "https://github.com/path-visualiser/app/issues"
   },
   "homepage": "https://path-visualiser.github.io/app",
-  "dependencies": {
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1"
-  },
+  "dependencies": {},
   "type": "module"
 }
