--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Visualiser",
   "version": "1.2.0",
   "description": "Visualise pathfinding search and more",
-  "version_name": "1.2.0; early March 2024",
+  "version_name": "1.2.0-1; late March 2024",
   "repository": "https://github.com/path-visualiser/app",
   "docs": "https://github.com/path-visualiser/app/blob/master/docs",
   "homepage": "https://path-visualiser.github.io/",
