Partially implement new tree renderer

--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,29 @@
   "version": "1.0.5",
   "private": true,
   "dependencies": {
+    "@antv/graphlib": "^2.0.2",
+    "@antv/layout": "^1.2.13",
+    "@antv/layout-wasm": "^1.4.0",
+    "@dagrejs/dagre": "^1.1.2",
     "@devbookhq/splitter": "^1.4.2",
     "@monaco-editor/react": "^4.5.2",
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.15.10",
+    "@react-sigma/core": "^4.0.2",
+    "@react-sigma/layout-forceatlas2": "^4.0.2",
+    "@sigma/edge-curve": "^3.0.0-beta.6",
+    "@types/dagre": "^0.7.52",
     "capture-console-logs": "^2.0.1-rc.1",
     "caught-object-report-json": "^7.1.7",
     "color-interpolate": "^1.0.5",
     "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
+    "dagre": "^0.8.5",
     "downloadjs": "^1.4.7",
     "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
+    "graphology": "^0.25.4",
     "internal-renderers": "file:../internal-renderers",
     "jimp": "^0.22.10",
     "js-yaml": "^4.1.0",
@@ -51,6 +61,7 @@
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-virtuoso": "^4.6.0",
     "renderer": "file:../renderer",
+    "sigma": "^3.0.0-beta.17",
     "socket.io-client": "^4.7.2",
     "string-template-parser": "^1.2.6",
     "typed-emitter": "^2.1.0",
