--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Posthoc",
   "name": "Posthoc",
-  "version": "1.2.1",
-  "description": "Visualise pathfinding search and more",
-  "version_name": "1.2.1; mid April 2024",
+  "version": "1.2.2",
+  "description": "Understand sequential decision-making through visualisation",
+  "version_name": "1.2.2; early May 2024",
   "repository": "https://github.com/path-visualiser/app",
   "changelog": "https://github.com/path-visualiser/app/blob/master/docs",
   "docs": "https://path-visualiser.github.io/docs/overview",
@@ -27,9 +27,9 @@
   ],
   "start_url": "./",
   "display": "standalone",
-  "theme_color": "#0a0c10",
+  "theme_color": "#111317",
   "scope": ".",
-  "background_color": "#0a0c10",
+  "background_color": "#111317",
   "display_override": ["window-controls-overlay"],
   "screenshots": [
     {
