--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "react-error-boundary": "^4.0.12",
     "react-file-drop": "^3.1.6",
     "react-slot-component": "^2.0.3",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-virtuoso": "^4.6.0",
