--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Posthoc",
   "name": "Posthoc",
-  "version": "1.2.2",
-  "description": "Understand sequential decision-making through visualisation",
-  "version_name": "1.2.2; early May 2024",
+  "version": "1.2.3",
+  "description": "Understand sequential decision-making through visualisation.",
+  "version_name": "1.2.3; early May 2024",
   "repository": "https://github.com/path-visualiser/app",
   "changelog": "https://github.com/path-visualiser/app/blob/master/docs",
   "docs": "https://path-visualiser.github.io/docs/overview",
