--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,13 +1,13 @@
 {
   "short_name": "Posthoc",
   "name": "Posthoc",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Understand sequential decision-making through visualisation.",
-  "version_name": "1.2.3; early May 2024",
+  "version_name": "1.2.4; early May 2024",
   "repository": "https://github.com/path-visualiser/app",
   "changelog": "https://github.com/path-visualiser/app/blob/master/docs",
   "docs": "https://path-visualiser.github.io/docs/overview",
-  "homepage": "https://path-visualiser.github.io/",
+  "homepage": "https://path-visualiser.github.io",
   "icons": [
     {
       "src": "./favicon.png",
