Add ability to create new windows

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "material-ui-popup-state": "^5.0.9",
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
+    "mobile-device-detect": "^0.4.3",
     "monaco-editor": "^0.43.0",
     "nanoid": "^5.0.1",
     "nearest-pantone": "^1.0.1",
@@ -65,10 +66,12 @@
     "sigma": "^3.0.0-beta.17",
     "socket.io-client": "^4.7.2",
     "string-template-parser": "^1.2.6",
+    "sysend": "^1.17.4",
     "typed-emitter": "^2.1.0",
     "typescript": "^5.2.2",
     "unique-username-generator": "^1.2.0",
     "url-parse": "^1.5.3",
+    "use-window-focus": "^1.4.3",
     "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.1"
   },
