--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -4,10 +4,10 @@
   "version": "1.2.4",
   "description": "Understand sequential decision-making through visualisation.",
   "version_name": "1.2.4; early May 2024",
-  "repository": "https://github.com/path-visualiser/app",
+  "repository": "https://github.com/ShortestPathLab/posthoc-app",
   "changelog": "http://localhost:3000/blog",
-  "docs": "https://path-visualiser.github.io/docs/overview",
-  "homepage": "https://path-visualiser.github.io",
+  "docs": "https://posthoc.pathfinding.ai/docs/overview",
+  "homepage": "https://posthoc.pathfinding.ai",
   "icons": [
     {
       "src": "./favicon.png",
