Upgrade to react 19

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           sudo apt install --install-recommends winehq-stable
       - name: Build client
         run: |
-          npm install
+          npm install --force
           cd client && npm run build && npm run package
       - name: Build adapter (Filesystem Sync)
         run: |
