--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,15 @@
   "version": "1.0.5",
   "private": true,
   "dependencies": {
-    "@antv/graphlib": "^2.0.2",
-    "@antv/layout": "^1.2.13",
-    "@antv/layout-wasm": "^1.4.0",
     "@dagrejs/dagre": "^1.1.2",
     "@devbookhq/splitter": "^1.4.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@monaco-editor/react": "^4.5.2",
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.146",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.15.18",
     "@react-sigma/core": "^4.0.2",
-    "@react-sigma/layout-forceatlas2": "^4.0.2",
     "@sigma/edge-curve": "^3.0.0-beta.6",
     "@types/dagre": "^0.7.52",
     "capture-console-logs": "^2.0.1-rc.1",
@@ -47,17 +45,16 @@
     "pluralize": "^8.0.0",
     "promise-tools": "^2.1.0",
     "protocol": "file:../protocol",
-    "react": "^18.2.0",
+    "react": "^19.0.0-beta-26f2496093-20240514",
     "react-async-hook": "^4.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-colorful": "^5.6.1",
     "react-d3-tree": "^3.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0-beta-26f2496093-20240514",
     "react-error-boundary": "^4.0.12",
     "react-file-drop": "^3.1.6",
-    "react-slot-component": "^2.0.3",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.4.0",
     "react-virtualized-auto-sizer": "^1.0.20",
@@ -71,7 +68,6 @@
     "typescript": "^5.2.2",
     "unique-username-generator": "^1.2.0",
     "url-parse": "^1.5.3",
-    "use-window-focus": "^1.4.3",
     "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.1"
   },
@@ -94,6 +90,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -119,10 +116,6 @@
     "jsdom": "^22.1.0",
     "vitest": "^0.34.6",
     "vitest-canvas-mock": "^0.3.3"
-  },
-  "peerDependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0"
   },
   "homepage": ".",
   "main": "main.js"
