--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
     "graphology": "^0.25.4",
+    "hotscript": "^1.0.13",
     "internal-renderers": "file:../internal-renderers",
     "jimp": "^0.22.10",
     "js-yaml": "^4.1.0",
@@ -35,6 +36,7 @@
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
     "mobile-device-detect": "^0.4.3",
+    "moderndash": "^3.12.0",
     "monaco-editor": "^0.43.0",
     "nanoid": "^5.0.1",
     "nearest-pantone": "^1.0.1",
@@ -90,7 +92,6 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -108,6 +109,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^4.1.0",
+    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
     "electron": "^26.2.4",
     "electron-packager": "^17.1.2",
     "eslint": "^8.51.0",
