--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@devbookhq/splitter": "^1.4.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hello-pangea/dnd": "^16.6.0",
     "@monaco-editor/react": "^4.5.2",
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.146",
@@ -49,7 +50,6 @@
     "protocol": "file:../protocol",
     "react": "^19.0.0-beta-26f2496093-20240514",
     "react-async-hook": "^4.0.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-colorful": "^5.6.1",
     "react-d3-tree": "^3.6.1",
     "react-dnd": "^16.0.1",
