--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "url": "https://github.com/ShortestPathLab/posthoc-app/issues"
   },
   "homepage": "posthoc.pathfinding.ai",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^19.0.0-beta-26f2496093-20240514",
+    "react-dom": "^19.0.0-beta-26f2496093-20240514"
+  },
   "type": "module"
 }
