--- a/adapter-fs-bridge/package.json
+++ b/adapter-fs-bridge/package.json
@@ -30,8 +30,8 @@
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "typed-emitter": "^2.1.0",
-    "untildify": "^5.0.0",
     "typescript": "^4.4.4",
+    "untildify": "^5.0.0",
     "yaml": "^2.3.1",
     "zod": "^3.21.4"
   },
@@ -43,9 +43,9 @@
     "@types/md5": "^2.3.1",
     "@types/memoizee": "^0.4.11",
     "@types/socket.io-client": "^3.0.0",
-    "vite-node": "^0.34.4",
-    "vite-tsconfig-paths": "^4.2.1",
     "pkg": "^5.8.1",
-    "vite": "^4.4.7"
+    "vite": "^4.4.7",
+    "vite-node": "^0.34.4",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
