--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.2.5",
+  "version": "1.2.5-1",
   "private": true,
   "dependencies": {
     "@dagrejs/dagre": "^1.1.2",
