--- a/internal-renderers/package.json
+++ b/internal-renderers/package.json
@@ -11,44 +11,44 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@turf/point-to-line-distance": "^6.5.0",
-    "adapter": "file:../adapter",
+    "@turf/point-to-line-distance": "^7.1.0",
     "color-interpolate": "^1.0.5",
-    "colortranslator": "^2.0.0",
+    "colortranslator": "^4.1.0",
     "combinate": "^1.1.11",
-    "detect-collisions": "^9.1.1",
+    "detect-collisions": "^9.24.0",
     "eventemitter3": "^5.0.1",
     "lodash": "^4.17.21",
-    "memoizee": "^0.4.15",
-    "nanoid": "^4.0.2",
-    "pixi-viewport": "^5.0.1",
-    "pixi.js": "^7.2.4",
+    "memoizee": "^0.4.17",
+    "nanoid": "^5.0.8",
+    "pixi-viewport": "5.0.1",
+    "pixi.js": "7.2.4",
     "protocol": "file:../protocol",
-    "rbush": "^3.0.1",
+    "rbush": "^4.0.1",
     "renderer": "file:../renderer",
     "typed-emitter": "^2.1.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.26",
-    "@storybook/addon-interactions": "^7.0.24",
-    "@storybook/addon-links": "^7.0.24",
-    "@storybook/blocks": "^7.0.24",
-    "@storybook/react": "^7.0.24",
-    "@storybook/react-vite": "^7.0.24",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/lodash": "^4.14.195",
-    "@types/memoizee": "^0.4.8",
-    "@types/rbush": "^3.0.0",
-    "@vitest/web-worker": "^0.32.2",
+    "@storybook/addon-essentials": "^8.4.4",
+    "@storybook/addon-interactions": "^8.4.4",
+    "@storybook/addon-links": "^8.4.4",
+    "@storybook/blocks": "^8.4.4",
+    "@storybook/react": "^8.4.4",
+    "@storybook/react-vite": "^8.4.4",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/lodash": "^4.17.13",
+    "@types/memoizee": "^0.4.11",
+    "@types/rbush": "^4.0.0",
+    "@vitest/web-worker": "^2.1.5",
     "canvas": "^2.11.2",
-    "jest-webgl-canvas-mock": "^2.5.0",
-    "jsdom": "^22.1.0",
+    "jest-webgl-canvas-mock": "^2.5.3",
+    "jsdom": "^25.0.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.0.26",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.32.2",
-    "vitest-canvas-mock": "^0.3.1"
-  }
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "storybook": "^8.4.4",
+    "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^2.1.5",
+    "vitest-canvas-mock": "^0.3.3"
+  },
+  "type": "module"
 }
