--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
-
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
       - name: Install and Build
         run: |
-          npm install --force
-          cd client && npm run build
+          bun i
+          cd client && bun run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
