--- a/client/package.json
+++ b/client/package.json
@@ -3,79 +3,74 @@
   "version": "1.2.5-2",
   "private": true,
   "dependencies": {
-    "@dagrejs/dagre": "^1.1.2",
+    "@dagrejs/dagre": "^1.1.4",
     "@devbookhq/splitter": "^1.4.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hello-pangea/dnd": "^16.6.0",
-    "@monaco-editor/react": "^4.5.2",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/lab": "^5.0.0-alpha.146",
-    "@mui/material": "^5.15.18",
-    "@react-sigma/core": "^4.0.2",
-    "@sigma/edge-curve": "^3.0.0-beta.6",
-    "@types/dagre": "^0.7.52",
+    "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.7",
+    "@react-sigma/core": "^4.0.3",
+    "@sigma/edge-curve": "^3.0.0-beta.16",
     "capture-console-logs": "^2.0.1-rc.1",
-    "caught-object-report-json": "^7.1.7",
+    "caught-object-report-json": "^7.2.0",
     "color-interpolate": "^1.0.5",
     "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
-    "dagre": "^0.8.5",
     "downloadjs": "^1.4.7",
     "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
     "graphology": "^0.25.4",
     "hotscript": "^1.0.13",
     "internal-renderers": "file:../internal-renderers",
-    "jimp": "^0.22.10",
+    "jimp": "^0.22.12",
     "js-yaml": "^4.1.0",
     "json-beautify": "^1.1.1",
-    "json-rpc-2.0": "^1.6.0",
+    "json-rpc-2.0": "^1.7.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
-    "material-ui-popup-state": "^5.0.9",
+    "material-ui-popup-state": "^5.3.1",
     "md5": "^2.3.0",
-    "memoizee": "^0.4.15",
+    "memoizee": "^0.4.17",
     "mobile-device-detect": "^0.4.3",
     "moderndash": "^3.12.0",
     "monaco-editor": "^0.43.0",
-    "nanoid": "^5.0.1",
+    "nanoid": "^5.0.8",
     "nearest-pantone": "^1.0.1",
-    "object-sizeof": "^2.6.4",
-    "overlayscrollbars": "^2.3.2",
-    "overlayscrollbars-react": "^0.5.2",
+    "object-sizeof": "^2.6.5",
+    "overlayscrollbars": "^2.10.0",
+    "overlayscrollbars-react": "^0.5.6",
     "performant-array-to-tree": "^1.11.0",
     "pluralize": "^8.0.0",
     "promise-tools": "^2.1.0",
     "protocol": "file:../protocol",
-    "react": "^19.0.0-beta-26f2496093-20240514",
+    "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-async-hook": "^4.0.0",
     "react-colorful": "^5.6.1",
-    "react-d3-tree": "^3.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0-beta-26f2496093-20240514",
-    "react-error-boundary": "^4.0.12",
+    "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
+    "react-error-boundary": "^4.1.2",
     "react-file-drop": "^3.1.6",
     "react-transition-group": "^4.4.5",
-    "react-use": "^17.4.0",
-    "react-virtualized-auto-sizer": "^1.0.20",
-    "react-virtuoso": "^4.6.0",
+    "react-use": "^17.5.1",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-virtuoso": "^4.12.0",
     "renderer": "file:../renderer",
-    "sigma": "^3.0.0-beta.17",
-    "socket.io-client": "^4.7.2",
+    "sigma": "^3.0.0-beta.37",
+    "socket.io-client": "^4.8.1",
     "string-template-parser": "^1.2.6",
-    "sysend": "^1.17.4",
+    "sysend": "^1.17.5",
     "typed-emitter": "^2.1.0",
-    "typescript": "^5.2.2",
-    "unique-username-generator": "^1.2.0",
-    "url-parse": "^1.5.3",
-    "vite": "^4.4.9",
-    "vite-tsconfig-paths": "^4.2.1"
+    "typescript": "^5.6.3",
+    "unique-username-generator": "^1.3.0",
+    "url-parse": "^1.5.10"
   },
   "scripts": {
-    "start": "vite",
-    "build": "vite build --emptyOutDir",
+    "start": "bunx --bun vite",
+    "build": "bunx --bun vite build --emptyOutDir",
     "package": "sh ./package.sh",
     "test": "vitest"
   },
@@ -92,32 +87,35 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/downloadjs": "^1.4.4",
+    "vite": "^4.5.5",
+    "vite-tsconfig-paths": "^4.3.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/downloadjs": "^1.4.6",
     "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "^4.14.199",
-    "@types/md5": "^2.3.3",
-    "@types/memoizee": "^0.4.9",
+    "@types/lodash": "^4.17.13",
+    "@types/md5": "^2.3.5",
+    "@types/memoizee": "^0.4.11",
     "@types/pluralize": "^0.0.31",
-    "@types/react": "^18.2.24",
-    "@types/react-beautiful-dnd": "^13.1.5",
-    "@types/react-dom": "^18.2.8",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/url-parse": "^1.4.9",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "@vitejs/plugin-react": "^4.1.0",
-    "babel-plugin-react-compiler": "^0.0.0-experimental-592953e-20240517",
-    "electron": "^26.2.4",
+    "@types/react": "^18.3.12",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/url-parse": "^1.4.11",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "electron": "^26.6.10",
     "electron-packager": "^17.1.2",
-    "eslint": "^8.51.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-0dec889-20241115",
     "jsdom": "^22.1.0",
     "vitest": "^0.34.6",
-    "vitest-canvas-mock": "^0.3.3"
+    "vitest-canvas-mock": "^0.3.3",
+    "babel-plugin-react-compiler": "^19.0.0-beta-0dec889-20241115"
   },
   "homepage": ".",
   "main": "main.js"
