--- a/internal-renderers/package.json
+++ b/internal-renderers/package.json
@@ -39,16 +39,13 @@
     "@types/memoizee": "^0.4.11",
     "@types/rbush": "^4.0.0",
     "@vitest/web-worker": "^2.1.5",
-    "canvas": "^2.11.2",
-    "jest-webgl-canvas-mock": "^2.5.3",
     "jsdom": "^25.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "storybook": "^8.4.4",
     "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^2.1.5",
-    "vitest-canvas-mock": "^0.3.3"
+    "vitest": "^2.1.5"
   },
   "type": "module"
 }
