--- a/adapter-fs-bridge/package.json
+++ b/adapter-fs-bridge/package.json
@@ -26,7 +26,7 @@
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
     "node-emoji": "^2.1.0",
-    "protocol": "file:../protocol",
+    "protocol": "workspace:*",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "typed-emitter": "^2.1.0",
@@ -44,7 +44,7 @@
     "@types/memoizee": "^0.4.11",
     "@types/socket.io-client": "^3.0.0",
     "pkg": "^5.8.1",
-    "vite": "^4.4.7",
+    "vite": "^5.4.11",
     "vite-node": "^0.34.4",
     "vite-tsconfig-paths": "^4.2.1"
   }
