--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "file-select-dialog": "^1.5.4",
     "graphology": "^0.25.4",
     "hotscript": "^1.0.13",
-    "internal-renderers": "file:../internal-renderers",
+    "internal-renderers": "workspace:*",
     "jimp": "^0.22.12",
     "js-yaml": "^4.1.0",
     "json-beautify": "^1.1.1",
@@ -45,7 +45,7 @@
     "performant-array-to-tree": "^1.11.0",
     "pluralize": "^8.0.0",
     "promise-tools": "^2.1.0",
-    "protocol": "file:../protocol",
+    "protocol": "workspace:*",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-async-hook": "^4.0.0",
     "react-colorful": "^5.6.1",
@@ -58,7 +58,7 @@
     "react-use": "^17.5.1",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-virtuoso": "^4.12.0",
-    "renderer": "file:../renderer",
+    "renderer": "workspace:*",
     "sigma": "^3.0.0-beta.37",
     "socket.io-client": "^4.8.1",
     "string-template-parser": "^1.2.6",
@@ -87,8 +87,6 @@
     ]
   },
   "devDependencies": {
-    "vite": "^4.5.5",
-    "vite-tsconfig-paths": "^4.3.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
@@ -106,6 +104,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "babel-plugin-react-compiler": "^19.0.0-beta-0dec889-20241115",
     "electron": "^26.6.10",
     "electron-packager": "^17.1.2",
     "eslint": "^8.57.1",
@@ -113,10 +112,12 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-0dec889-20241115",
     "jsdom": "^22.1.0",
-    "vitest": "^0.34.6",
-    "vitest-canvas-mock": "^0.3.3",
-    "babel-plugin-react-compiler": "^19.0.0-beta-0dec889-20241115"
+    "vite": "^5.4.11",
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.5",
+    "vitest-canvas-mock": "^0.3.3"
   },
   "homepage": ".",
-  "main": "main.js"
+  "main": "main.js",
+  "type": "module"
 }
