--- a/internal-renderers/package.json
+++ b/internal-renderers/package.json
@@ -22,9 +22,9 @@
     "nanoid": "^5.0.8",
     "pixi-viewport": "5.0.1",
     "pixi.js": "7.2.4",
-    "protocol": "file:../protocol",
+    "protocol": "workspace:*",
     "rbush": "^4.0.1",
-    "renderer": "file:../renderer",
+    "renderer": "workspace:*",
     "typed-emitter": "^2.1.0"
   },
   "devDependencies": {
@@ -44,7 +44,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "storybook": "^8.4.4",
-    "vite-tsconfig-paths": "^5.1.2",
+    "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.5"
   },
   "type": "module"
