--- a/client/package.json
+++ b/client/package.json
@@ -5,17 +5,17 @@
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
     "@devbookhq/splitter": "^1.4.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@hello-pangea/dnd": "^16.6.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@hello-pangea/dnd": "^17.0.0",
     "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/lab": "^5.0.0-alpha.173",
-    "@mui/material": "^5.16.7",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/lab": "^6.0.0-beta.16",
+    "@mui/material": "^6.1.8",
     "@react-sigma/core": "^4.0.3",
     "@sigma/edge-curve": "^3.0.0-beta.16",
     "capture-console-logs": "^2.0.1-rc.1",
-    "caught-object-report-json": "^7.2.0",
+    "caught-object-report-json": "^8.0.0",
     "color-interpolate": "^1.0.5",
     "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
@@ -25,7 +25,7 @@
     "graphology": "^0.25.4",
     "hotscript": "^1.0.13",
     "internal-renderers": "workspace:*",
-    "jimp": "^0.22.12",
+    "jimp": "^1.6.0",
     "js-yaml": "^4.1.0",
     "json-beautify": "^1.1.1",
     "json-rpc-2.0": "^1.7.0",
@@ -36,7 +36,7 @@
     "memoizee": "^0.4.17",
     "mobile-device-detect": "^0.4.3",
     "moderndash": "^3.12.0",
-    "monaco-editor": "^0.43.0",
+    "monaco-editor": "^0.52.0",
     "nanoid": "^5.0.8",
     "nearest-pantone": "^1.0.1",
     "object-sizeof": "^2.6.5",
@@ -46,12 +46,12 @@
     "pluralize": "^8.0.0",
     "promise-tools": "^2.1.0",
     "protocol": "workspace:*",
-    "react": "^19.0.0-rc-fb9a90fa48-20240614",
+    "react": "^19.0.0-rc.1",
     "react-async-hook": "^4.0.0",
     "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
+    "react-dom": "^19.0.0-rc.1",
     "react-error-boundary": "^4.1.2",
     "react-file-drop": "^3.1.6",
     "react-transition-group": "^4.4.5",
@@ -59,7 +59,7 @@
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-virtuoso": "^4.12.0",
     "renderer": "workspace:*",
-    "sigma": "^3.0.0-beta.37",
+    "sigma": "^3.0.0-beta.38",
     "socket.io-client": "^4.8.1",
     "string-template-parser": "^1.2.6",
     "sysend": "^1.17.5",
@@ -88,30 +88,30 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/downloadjs": "^1.4.6",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.13",
     "@types/md5": "^2.3.5",
     "@types/memoizee": "^0.4.11",
-    "@types/pluralize": "^0.0.31",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^18.3.12",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.1",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/url-parse": "^1.4.11",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@vitejs/plugin-react": "^4.3.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-0dec889-20241115",
-    "electron": "^26.6.10",
+    "electron": "^33.2.0",
     "electron-packager": "^17.1.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.15.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-0dec889-20241115",
-    "jsdom": "^22.1.0",
+    "jsdom": "^25.0.1",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.5",
