--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Posthoc",
   "name": "Posthoc",
-  "version": "1.2.5-5",
+  "version": "1.2.5-6",
   "description": "Understand sequential decision-making through visualisation.",
-  "version_name": "1.2.5-5; mid November 2024",
+  "version_name": "1.2.5-6; early December 2024",
   "repository": "https://github.com/ShortestPathLab/posthoc-app",
   "changelog": "http://posthoc.pathfinding.ai/blog",
   "docs": "https://posthoc.pathfinding.ai/docs/overview",
