--- a/adapter-fs-bridge/package.json
+++ b/adapter-fs-bridge/package.json
@@ -46,6 +46,7 @@
     "pkg": "^5.8.1",
     "vite": "^5.4.11",
     "vite-node": "^0.34.4",
-    "vite-tsconfig-paths": "^4.2.1"
-  }
+    "vite-tsconfig-paths": "^5.1.3"
+  },
+  "type": "module"
 }
