--- a/adapter-warthog-wasm/package.json
+++ b/adapter-warthog-wasm/package.json
@@ -27,6 +27,7 @@
     "@types/md5": "^2.3.1",
     "gh-pages": "^6.0.0",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^4.2.1"
-  }
+    "vite-tsconfig-paths": "^5.1.3"
+  },
+  "type": "module"
 }
