--- a/client/src/.env
+++ b/client/src/.env
@@ -1,2 +1,2 @@
-VITE_DEV_CLIENT_ID = Ov23liGa2X5yTTZPfzdt
-VITE_PROD_CLIENT_ID = Ov23lisU9DfHVAxosi5E
+VITE_CLIENT_ID = 22951481779-ptamef5mdso2df2skpban8ju7747hgg5.apps.googleusercontent.com
+VITE_API_KEY = AIzaSyDfkk-lpDLqpfJ44zn4qnLj8krAeMx0fGM
