--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@sigma/edge-curve": "^3.0.0-beta.16",
     "capture-console-logs": "^2.0.1-rc.1",
     "caught-object-report-json": "^8.0.0",
+    "clipboard-copy": "^4.0.1",
     "color-interpolate": "^1.0.5",
     "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
