--- a/client/package.json
+++ b/client/package.json
@@ -72,7 +72,7 @@
     "url-parse": "^1.5.10"
   },
   "scripts": {
-    "start": "bunx --bun vite",
+    "start": "bunx --bun vite --host",
     "build": "bunx --bun vite build --emptyOutDir",
     "package": "sh ./package.sh",
     "test": "vitest"
@@ -90,6 +90,7 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -107,16 +108,18 @@
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/url-parse": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "@vitejs/plugin-react": "^4.3.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
     "electron": "^33.2.0",
     "electron-packager": "^17.1.2",
-    "eslint": "^9.15.0",
+    "eslint": "^9.18.0",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
+    "globals": "^15.14.0",
     "jsdom": "^25.0.1",
+    "typescript-eslint": "^8.21.0",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.5",
