--- a/client/package.json
+++ b/client/package.json
@@ -5,17 +5,17 @@
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
     "@devbookhq/splitter": "^1.4.2",
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@monaco-editor/react": "^4.6.0",
-    "@mui-symbols-material/w300": "^0.3.3",
-    "@mui-symbols-material/w400": "^0.3.3",
-    "@mui/icons-material": "^6.1.8",
-    "@mui/lab": "^6.0.0-beta.16",
-    "@mui/material": "^6.1.8",
-    "@react-sigma/core": "^4.0.3",
-    "@sigma/edge-curve": "^3.0.0-beta.16",
+    "@mui-symbols-material/w300": "^0.4.1",
+    "@mui-symbols-material/w400": "^0.4.1",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/lab": "^6.0.0-beta.25",
+    "@mui/material": "^6.4.2",
+    "@react-sigma/core": "^5.0.2",
+    "@sigma/edge-curve": "^3.1.0",
     "capture-console-logs": "^2.0.1-rc.1",
     "caught-object-report-json": "^8.0.0",
     "clipboard-copy": "^4.0.1",
@@ -25,7 +25,7 @@
     "downloadjs": "^1.4.7",
     "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
-    "graphology": "^0.25.4",
+    "graphology": "^0.26.0",
     "hotscript": "^1.0.13",
     "internal-renderers": "workspace:*",
     "jimp": "^1.6.0",
@@ -34,41 +34,41 @@
     "json-rpc-2.0": "^1.7.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
-    "material-ui-popup-state": "^5.3.1",
+    "material-ui-popup-state": "^5.3.3",
     "md5": "^2.3.0",
     "memoizee": "^0.4.17",
     "mobile-device-detect": "^0.4.3",
-    "moderndash": "^3.12.0",
-    "monaco-editor": "^0.52.0",
-    "nanoid": "^5.0.8",
+    "moderndash": "^4.0.0",
+    "monaco-editor": "^0.52.2",
+    "nanoid": "^5.0.9",
     "nearest-pantone": "^1.0.1",
     "object-sizeof": "^2.6.5",
-    "overlayscrollbars": "^2.10.0",
+    "overlayscrollbars": "^2.10.1",
     "overlayscrollbars-react": "^0.5.6",
     "performant-array-to-tree": "^1.11.0",
     "pluralize": "^8.0.0",
     "promise-tools": "^2.1.0",
     "protocol": "workspace:*",
-    "react": "^19.0.0-rc.1",
+    "react": "^19.0.0",
     "react-async-hook": "^4.0.0",
     "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0-rc.1",
-    "react-error-boundary": "^4.1.2",
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-file-drop": "^3.1.6",
     "react-transition-group": "^4.4.5",
-    "react-use": "^17.5.1",
-    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-use": "^17.6.0",
+    "react-virtualized-auto-sizer": "^1.0.25",
     "react-virtuoso": "^4.12.3",
     "renderer": "workspace:*",
-    "sigma": "^3.0.0-beta.38",
+    "sigma": "^3.0.1",
     "socket.io-client": "^4.8.1",
     "string-template-parser": "^1.2.6",
     "sysend": "^1.17.5",
     "typed-emitter": "^2.1.0",
-    "typescript": "^5.6.3",
-    "unique-username-generator": "^1.3.0",
+    "typescript": "^5.7.3",
+    "unique-username-generator": "^1.4.0",
     "url-parse": "^1.5.10"
   },
   "scripts": {
@@ -90,39 +90,39 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
+    "@eslint/js": "^9.19.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/downloadjs": "^1.4.6",
     "@types/gapi": "^0.0.47",
     "@types/google.accounts": "^0.0.15",
     "@types/js-yaml": "^4.0.9",
-    "@types/lodash": "^4.17.13",
+    "@types/lodash": "^4.17.15",
     "@types/md5": "^2.3.5",
     "@types/memoizee": "^0.4.11",
     "@types/pluralize": "^0.0.33",
-    "@types/react": "^18.3.12",
+    "@types/react": "^19.0.8",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18.3.1",
+    "@types/react-dom": "^19.0.3",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/url-parse": "^1.4.11",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.21.0",
-    "@vitejs/plugin-react": "^4.3.3",
-    "babel-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
-    "electron": "^33.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
+    "electron": "^34.0.2",
     "electron-packager": "^17.1.2",
-    "eslint": "^9.18.0",
+    "eslint": "^9.19.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
     "globals": "^15.14.0",
-    "jsdom": "^25.0.1",
-    "typescript-eslint": "^8.21.0",
-    "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.3",
-    "vitest": "^2.1.5",
+    "jsdom": "^26.0.0",
+    "typescript-eslint": "^8.23.0",
+    "vite": "^6.0.11",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.5",
     "vitest-canvas-mock": "^0.3.3"
   },
   "homepage": ".",
