--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,11 @@ on:
       - master
 jobs:
   build-and-deploy:
+    environment: github-pages
     runs-on: ubuntu-latest
     env:
+      VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
+      VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
       CI: false
     steps:
       - name: Checkout
