--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,14 +1,8 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "types": [
-      "vite/client"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -17,7 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -25,8 +19,5 @@
     "baseUrl": "src",
     "downlevelIteration": true
   },
-  "include": [
-    "src",
-    "src/components/app-bar/Title.test.tsx"
-  ]
+  "include": ["src", "src/components/app-bar/Title.test.tsx"]
 }
