--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@types/object-hash": "^3.0.6",
+    "ajv": "^8.17.1",
     "async": "^3.2.6",
     "capture-console-logs": "^2.0.1-rc.1",
     "caught-object-report-json": "^8.0.0",
