working concept, handle labels' placement needs work

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "adapter-warthog-websocket",
     "adapter-iron-harvest",
     "resources"
-  ]
+  ],
+  "dependencies": {
+    "@xyflow/react": "^12.8.5"
+  }
 }
