--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
     "downloadjs": "^1.4.7",
+    "elkjs": "^0.11.0",
     "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
     "graphology": "^0.26.0",
