--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "adapter-warthog-websocket",
     "adapter-iron-harvest",
     "resources"
-  ]
+  ],
+  "dependencies": {
+    "caniuse-lite": "^1.0.30001754",
+    "use-window-focus": "^1.4.4"
+  }
 }
