General typescript linting and fixes

--- a/internal-renderers/tsconfig.json
+++ b/internal-renderers/tsconfig.json
@@ -17,7 +17,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
+    "paths": {"*": ["./src/*"]},
     "downlevelIteration": true
   },
   "include": ["src"]
