--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "resources"
   ],
   "dependencies": {
-    "caniuse-lite": "^1.0.30001754",
+    "baseline-browser-mapping": "^2.9.4",
+    "caniuse-lite": "^1.0.30001759",
     "use-window-focus": "^1.4.4"
   }
 }
