Experimental bun build

--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
     "@sigma/edge-curve": "^3.1.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
-    "@types/object-hash": "^3.0.6",
     "@xyflow/react": "^12.10.0",
     "ajv": "^8.17.1",
     "async": "^3.2.6",
@@ -54,7 +53,6 @@
     "monaco-yaml": "^5.4.0",
     "nanoid": "^5.1.6",
     "nearest-pantone": "^1.0.1",
-    "object-hash": "^3.0.0",
     "object-sizeof": "^2.6.5",
     "overlayscrollbars": "^2.13.0",
     "overlayscrollbars-react": "^0.5.6",
@@ -62,12 +60,12 @@
     "pluralize": "^8.0.0",
     "promise-tools": "^2.1.0",
     "protocol": "workspace:*",
-    "react": "^19.2.1",
+    "react": "19",
     "react-async-hook": "^4.0.0",
     "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.2.1",
+    "react-dom": "19",
     "react-error-boundary": "^5.0.0",
     "react-file-drop": "^3.1.6",
     "react-reverse-portal": "^2.3.0",
