--- a/internal-renderers/package.json
+++ b/internal-renderers/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@turf/helpers": "^7.3.1",
     "@turf/point-to-line-distance": "^7.1.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/object-hash": "^3.0.6",
     "color-interpolate": "^1.0.5",
     "colortranslator": "^4.1.0",
     "combinate": "^1.1.11",
@@ -20,6 +23,7 @@
     "lodash-es": "^4.17.21",
     "memoizee": "^0.4.17",
     "nanoid": "^5.0.8",
+    "object-hash": "^3.0.0",
     "pixi-viewport": "5.0.1",
     "pixi.js": "7.2.4",
     "protocol": "workspace:*",
@@ -40,8 +44,8 @@
     "@vitest/web-worker": "^2.1.5",
     "jsdom": "^25.0.1",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19",
+    "react-dom": "19",
     "storybook": "^8.4.4",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.5"
