--- a/client/package.json
+++ b/client/package.json
@@ -125,13 +125,13 @@
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "@vitejs/plugin-react": "^4.7.0",
-    "babel-plugin-react-compiler": "^19.0.0-beta-ebf51a3-20250411",
+    "babel-plugin-react-compiler": "^1.0.0",
     "electron": "^34.5.8",
     "electron-packager": "^17.1.2",
     "eslint": "^9.39.1",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-ebf51a3-20250411",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "globals": "^15.15.0",
     "jsdom": "^26.1.0",
     "typescript-eslint": "^8.48.1",
