--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "css-element-queries": "^1.2.3",
     "downloadjs": "^1.4.7",
     "elkjs": "^0.11.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eventemitter3": "^5.0.1",
     "file-select-dialog": "^1.5.4",
     "graphology": "^0.26.0",
