--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "short_name": "Posthoc",
   "name": "Posthoc",
-  "version": "1.5.0",
+  "version": "1.5.0-1",
   "description": "Understand sequential decision-making through visualisation.",
-  "version_name": "1.5.0; early November 2025",
+  "version_name": "1.5.0-1; early December 2025",
   "repository": "https://github.com/ShortestPathLab/posthoc-app",
   "changelog": "http://posthoc.pathfinding.ai/blog",
   "docs": "https://posthoc.pathfinding.ai/docs/overview",
