--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@sigma/edge-curve": "^3.1.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "@types/d3-scale": "^4.0.9",
     "@types/object-hash": "^3.0.6",
     "@xyflow/react": "^12.10.0",
     "ajv": "^8.17.1",
@@ -29,6 +30,7 @@
     "color-interpolate": "^1.0.7",
     "colortranslator": "^4.1.0",
     "css-element-queries": "^1.2.3",
+    "d3-scale": "^4.0.2",
     "downloadjs": "^1.4.7",
     "elkjs": "^0.11.0",
     "eslint-plugin-react-hooks": "^7.0.1",
